# insanely-fast-whisper

./: .gitignore  4bit_benchmark.ipynb  Proyectos De estudios  README.md  cog.yaml  convert_output.py  convert_srt.py  infer_faster_whisper_large_v2.ipynb  infer_transformers_whisper_large_v2.ipynb  insanely_fast_whisper_colab.ipynb  predict.py  pyproject.toml  requirements.txt  transcribe.py
docker/: Dockerfile  README.md  requirements.txt
scripts/: benchmark.py
src/insanely_fast_whisper/: cli.py  utils.py
src/insanely_fast_whisper/utils/: diarization_pipeline.py  diarize.py  result.py
