[project]
name = "insanely-fast-whisper"
version = "0.0.8"
description = "An insanely fast whisper CLI"
authors = [
    { name = "VB", email = "reachvaibhavs10@gmail.com" },
    { name = "Patrick Arminio", email = "patrick.arminio@gmail.com" },
]
dependencies = [
    "transformers",
    "optimum",
    "accelerate",
    "setuptools>=68.2.2",
    "rich>=13.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
insanely-fast-whisper = "insanely_fast_whisper.cli:main"
